--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -31,6 +31,7 @@ Learn more about how to get started using Console with our Tips and Tricks video
 ### Getting Started
 
 * [Console Quickstart](/use-the-network/console/quickstart)
+* [Host Your Own Console](/use-the-network/run-a-network-server)
 
 ### Devices
 * [Adding/Importing](/use-the-network/console/adding-devices)
