--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -1,10 +1,10 @@
 ---
 id: run-a-network-server
-sidebar_label: Run a Network Server
+sidebar_label: Host Your Own Console
 slug: /use-the-network/run-a-network-server
 ---
 
-# Run a Network Server
+# Host Your Own Console
 
 The Helium Network is unique in that it provides public wireless infrastructure
 for privately operated LoRaWAN Network Servers. Details about how Helium
@@ -33,8 +33,7 @@ Before pursuing this configuration though, it is worth considering.
   new accounts start with free 10,000 Data Credits. To go beyond 10 devices check out Console Hosting Providers [here](/use-the-network/console/hosting-providers).
 
 - An OUI costs $900 in Data Credits at a minimum ($100 for the OUI and $800 for
-  the smallest address slab), so if that cost is prohibitive, use Helium's
-  Console.
+  the smallest address slab).
 
   :::info
   For a video tutorial on setting up your own instance of Console, 
