--- a/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
+++ b/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
@@ -170,6 +170,11 @@ For router under significant load, the most critical graphs to watch:
 - **Offer Duration** should be within **milliseconds** (ms)
   + This translates directly to latency of server response
   + Excludes any Internet traffic latency
+- Others have values and trends that vary based upon what is being measured
+  and are described [below](#comprehending-the-results):
+  + **Join Offer Rate**
+  + **Packet Offer Rate**
+  + **Offer Rejected Reasons**
 
 For designing your own graphs, it helps bucketing by percentiles.  Common
 buckets are: 1%, 5%, 15%, 50%, 85%, 90%, 95%, 97%, 98%, 99% 100%, which
@@ -548,7 +553,7 @@ for o in $(seq $N_ORGS); do
     echo "[device.${device}]"                  >> $out
     seconds=$((20 + d % 20))
     echo 'secs_between_transmits = '$seconds   >> $out
-    frames=$((100 + d % 30))
+    frames=$((120 - d % 40))
     echo 'rejoin_frames = '$frames             >> $out
 
     echo 'packet_forwarder = "mux"'            >> $out
@@ -564,6 +569,10 @@ for o in $(seq $N_ORGS); do
   done
 done
 ```
+
+As seconds between transmits increases, number of frames until re-joins
+decreases for leveling overall traffic (reducing spikes and eliminating
+artificial surges).
 
 Some `'packet_forwarder` lines are intentionally commented-out above,
 because there might be occasions for connecting to a specific gateway
@@ -592,6 +601,8 @@ Significantly more than 1:100 ratio indicates the value for
 accommodates interference patterns from the scheduler in Linux and the Tokio
 async/await framework used within the Rust app, or it can be from the
 hypervisor when on a virtualized server instance.
+
+The metrics API will be used below to track successful Joins.
 
 ## Configure Gateways
 
@@ -628,6 +639,10 @@ for gw in $(seq --format="%02g" $FIRST_GW $N_GATEWAYS); do
   echo 'pubkey = "'${P2P}'"'            >> $out
   echo 'uri = "'${ROUTER_URL}'"'        >> $out
   echo 'oui = '${ROUTER_OUI}            >> $out
+  echo ''                               >> $out
+  # Uncomment for high traffic runs:
+  echo '# [log]'                        >> $out
+  echo '# level = "warn"'               >> $out
   i=$((i + 1))
 done
 ```
@@ -636,6 +651,10 @@ done
 If using "beta" or other version of
 [gateway-rs](https://github.com/helium/gateway-rs) instead of "release",
 change `[router.release]` to match.)
+
+For benchmark runs with very high traffic, uncomment the `[log]` section
+above, because there's a measurable cost of I/O due to logging that can
+negatively impact the host sending packets.
 
 ## Add Gateways To Blockchain
 
@@ -841,23 +860,21 @@ done
 Allow several minutes for each gateway concurrently connecting to validators
 and the router specified in settings.toml file.
 
-**Wait** until seeing an entry similar to the following for each:
+**Wait** until each hotspot reports height of the blockchain:
 
-```
-INFO updated routing to height 123456789, module: dispatcher
+```bash
+for gw in $(seq --format="%02g" $FIRST_GW $N_GATEWAYS); do
+  helium_gateway -c gw-$gw info > gw-$gw/gw-info.json
+done
+jq .gateway.height gw-*/gw-info.json || echo "Wait!"
 ```
 
-To determine whether to continue or wait, run:
-
-```
-[ "$(grep -l height gw-*/run.log | wc -l)" = "$N_GATEWAYS" ] \
-  && echo Continue || echo Wait
-```
+Only after each gateway reports a large integer for height, continue.
 
 Due to backoff and retry, each delay takes an increasing amount of time with
 random variation:
 
-```
+```log
  INFO selecting new gateway in 36s, module: dispatcher
  ...
  INFO selecting new gateway in 69s, module: dispatcher
@@ -870,7 +887,7 @@ random variation:
 
 Warnings about deadlines logged between retries can be safely ignored:
 
-```
+```log
  WARN gateway stream setup error: ...
    "error trying to connect: deadline has elapsed" ...
 ```
@@ -949,7 +966,7 @@ metrics() {
 }
 ```
 
-Run:
+Periodically run:
 
 ```bash
 metrics
@@ -1047,8 +1064,21 @@ that may facilitate driving higher traffic.  Future work will occur there.
 
 ## Comprehending The Results
 
+For measuring number of **devices within a devaddr slab**:
+
+Ensure "Join Offer Rate" graph shows step-wise increases, and "Packet Offer
+Rate" graph resembles a plateau.  Then, watch "Offer Rejected Reasons" graph
+and stop when seeing an increase in `devaddr_no_device`.
+
+With disambiguation due in part to the Message Integrity Check (MIC), the
+usable number will be higher than apparent capacity; thus, an 8 slab
+accommodates more than eight devices.  Actual limits may vary with Router
+and/or Console configurations used.
+
+For measuring **traffic load**:
+
 There should be a slow ramp-up of traffic such that we "find the knee"
-of the graph *before* hitting the plateau (ceiling).  Understand that
+of the graph *before* hitting the plateau (ceiling).  Understand this
 plateau being an approximation due to the nature of generated traffic.
 
 A good rule-of-thumb:
@@ -1073,3 +1103,12 @@ artifacts on the host OS that might be causing interference.  Consider
 migrating to different host server hardware (via hard stop/start) if
 running on a virtualized/hypervisor environment such as AWS, GCP,
 Linode, etc.
+
+Items that we addressed:
+
+- On Ubuntu Server, prevent Snap from updating during a benchmark run:
+  + `sudo snap list` and `sudo apt-get purge snapd`
+- If graphs are inconsistent, confirm each gateway is still connected to its
+upstream Validator:
+  + Confirm "Join Offer Rate" graph shows step-wise increases
+  + Confirm "Packet Offer Rate" graph resembles a plateau
