--- a/docs/use-the-network/devices/development/arduino/portenta-h7-with-lora-vision-shield/portenta-h7-with-lora-vision-shield.mdx
+++ b/docs/use-the-network/devices/development/arduino/portenta-h7-with-lora-vision-shield/portenta-h7-with-lora-vision-shield.mdx
@@ -30,12 +30,22 @@ for Always-on vision devices and applications.
 ### Resources
 
 - [Product Page](https://store.arduino.cc/portenta-vision-shield)
+- 
+- ### Firmware Quickstart Guides
+
+- [Arduino Guide](/use-the-network/devices/development/arduino/portenta-h7-with-lora-vision-shield)
+- 
+
+### Video Guides
+
+- [Community Tutorial Video](https://www.youtube.com/watch?v=wt_WZ1sBDeM&list=PL57Dnr1H_eguoFKLWY0nLMz0QI3nyQVmQ&index=12)
 
 ### Specifications
 
 #### Sensors:
 
-- sound
+- sound (dual microphones)
+- vision
 
 #### Dimensions:
 
